# async-siril

./: CONTRIBUTING.md  Dockerfile.siril  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  calibrate_light.py  create_master_bias.py  create_master_dark.py  create_master_flat.py  create_master_light.py  test_siril.py
src/async_siril/: __init__.py  command.py  command_types.py  conversion_file.py  event.py  helpers.py  siril.py  system.py
tests/: test_calibrate_command.py  test_command_basics.py  test_command_types.py  test_conversion_file.py  test_helpers.py  test_pipe_client.py  test_register_command.py  test_simple_preprocessing_commands.py  test_siril.py  test_siril_event.py  test_siril_pipes.py  test_siril_resource.py  test_system.py
tests/commands/: test_analysis_commands.py  test_astrometry_commands.py  test_basic_commands.py  test_calibrate_commands.py  test_color_commands.py  test_defect_commands.py  test_enhancement_commands.py  test_extract_commands.py  test_file_commands.py  test_livestack_commands.py  test_math_commands.py  test_register_command.py  test_remain.py  test_sequence_commands.py  test_stack_command.py  test_stretch_commands.py  test_transform_commands.py
tests/operations/: test_register_command.py  test_simple_postprocessing_commands.py  test_stack_command.py
